# lol-item-analyzer

./: .gitignore  README.md
cli/: Cargo.toml  README.md
cli/src/: cli.rs  config.rs  file.rs  main.rs
lol-item-analyzer/: .gitignore  Cargo.toml  README.md
lol-item-analyzer/src/: lib.rs
lol-item-analyzer/src/data/: local.rs  lol_api.rs  mod.rs  transform.rs
lol-item-analyzer/src/item/: mod.rs  transformer.rs
lol-item-analyzer/src/item/compute/: gold_value.rs  item_gv_calculator.rs  mod.rs  stat_gv.rs
lol-item-analyzer/src/item/gv/: item.rs  mod.rs
lol-item-analyzer/src/item/stat/: mod.rs
lol-item-analyzer/src/item/stat/transformer/: mod.rs  percent_transformer.rs
lol-item-analyzer/src/item/transformer/: id_assoc.rs  item_value.rs  masterwork_assoc.rs  masterwork_ident.rs  masterwork_item_value.rs  mod.rs
lol-item-analyzer/src/util/: league_version.rs  mod.rs
lol-item-analyzer/tests/: integration.rs
